--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.datasource.url=jdbc:h2:mem:dcbapp
+
+spring.h2.console.settings.web-allow-others=true
