update gh action

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
         java-version: '17'
     - name: Build the Docker image
       run: ./gradlew bootJar && docker build . --tag my-image-name:$(date +%s)
-      uses: macbre/push-to-ghcr@master
+    - uses: macbre/push-to-ghcr@master
         with:
           image_name: ${{ github.repository }}  # it will be lowercased internally
           github_token: ${{ secrets.GITHUB_TOKEN }}
