update gh action

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,9 +16,13 @@ jobs:
       with:
         distribution: 'zulu' # See 'Supported distributions' for available options
         java-version: '17'
-    - name: Build the Docker image
-      run: ./gradlew bootJar && docker build . --tag my-image-name:$(date +%s)
     - uses: macbre/push-to-ghcr@master
         with:
           image_name: ${{ github.repository }}  # it will be lowercased internally
           github_token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build the Docker image
+      run: |
+        ./gradlew bootJar
+        docker build . --tag ghcr.io/ztirom45/guess_number_server:latest
+        sudo docker push ghcr.io/ztirom45/guess_number_server:latest
+
