--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,13 +16,13 @@ jobs:
       with:
         distribution: 'zulu' # See 'Supported distributions' for available options
         java-version: '17'
-    - uses: macbre/push-to-ghcr@master
-        with:
-          image_name: 'ghcr.io/ztirom45/guess_number_server:latest'
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+      #- uses: macbre/push-to-ghcr@master
+      #  with:
+      #    image_name: 'ghcr.io/ztirom45/guess_number_server:latest'
+      #    github_token: ${{ secrets.GITHUB_TOKEN }}
     - name: Build the Docker image
       run: |
         ./gradlew bootJar
         docker build . --tag ghcr.io/ztirom45/guess_number_server:latest
-        sudo docker push ghcr.io/ztirom45/guess_number_server:latest
+        docker push ghcr.io/ztirom45/guess_number_server:latest
 
