--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=TRUE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.driverClassName=org.h2.Driver
 
-spring.h2.console.path=/h2-console
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
-spring.h2.console.settings.trace=false
-spring.datasource.url=jdbc:h2:mem:dcbapp
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
+spring.datasource.username=postgres
+spring.datasource.password=psw
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# This will create table automatically in your database
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialet
+spring.jpa.hibernate.ddl-auto=create
+
