--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,11 +22,10 @@ jobs:
     - name: Build jar with gradle
       run: | 
         ./gradlew bootJar
-    - name: Build the Docker image
-      run: | 
-        docker build . --tag ghcr.io/ztirom45/guess_number_server:latest
-    - name: push to dhcr
-      run: |
-        echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u Ztirom45 --password-stdin
-        docker push ghcr.io/ztirom45/guess_number_server:latest
+    
+    - name: Build Compose Images
+      run: docker compose -f compose.yaml build
+  
+    - name: Push image to Container Registry
+      run: docker compose -f compose.yaml push
 
