--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,14 @@
-version: '3'
 services:
   web:
     build: .
     ports:
       - "8080:8080"
-  db:
-    image: "postgres:9.6"
+  postgres:
+    image: postgres:latest
+    container_name: my_postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: psw
+      POSTGRES_DB: db
+    ports:
+      - "5432:5432"
