--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
 	compileOnly 'org.projectlombok:lombok:1.18.36'
 	annotationProcessor 'org.projectlombok:lombok:1.18.36'
+
 }
 
 tasks.named('test') {
@@ -36,3 +37,6 @@ tasks.named('test') {
 }
 
 
+test {
+  testLogging.showStandardStreams = true
+}
