--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/db
+spring.datasource.url=jdbc:postgresql://postgres:5432/db
 spring.datasource.username=postgres
 spring.datasource.password=psw
 spring.datasource.driver-class-name=org.postgresql.Driver
